duniverse/menhirLib.20200211/test/static/bad/tuple-pattern.mly
%%

let main :=
  (%prec hop) = bar
    {}
